--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ accelerate = "^0.18.0"
 sentence-transformers = "^2.2.2"
 pypdf2 = "^3.0.1"
 chromadb = "^0.3.21"
+protobuf = "3.20.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
