--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,29 @@
-[tool.poetry]
-name = "llmplay"
-version = "0.1.0"
-description = "LLM Playground"
-authors = ["Denis L. <lepchev@gmail.com>"]
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-llama-index = "^0.5.15"
-langchain = "^0.0.139"
-transformers = "^4.28.0"
-torch = "^2.0.0"
-torchvision = "^0.15.1"
-accelerate = "^0.18.0"
-sentence-transformers = "^2.2.2"
-pypdf2 = "^3.0.1"
-chromadb = "^0.3.21"
-protobuf = "3.20.3"
-
-[tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
-ipykernel = "^6.22.0"
-
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "setuptools_scm_azure_pipelines>=0.1"]
+build-backend = "setuptools.build_meta"
 
+[project]
+name = "llmplay"
+description = "LLM Playground Tools"
+
+dynamic = ["dependencies","version"]
+
+[project.optional-dependencies]
+dev = [
+    "black",
+    "pytest",
+    "pytest-cov",
+    "ruff"
+]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
+
+
+[tool.ruff]
+# Decrease the maximum line length to 79 characters.
+line-length = 119
+src = ["src"]
