--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ sentencepiece==0.1.99
 setuptools==67.7.2
 loguru
 python-dotenv
+accelerate==0.19.0
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
