--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 chromadb==0.3.21
-langchain
+langchain==0.0.189
 llama-index==0.6.9
 sentence-transformers==2.2.2
 pypdf2==3.0.1
@@ -8,6 +8,9 @@ setuptools==67.7.2
 loguru
 python-dotenv
 accelerate==0.19.0
+protobuf==3.20.0
+termcolor
+einops
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
