--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ python-dotenv
 accelerate==0.19.0
 protobuf==3.20.0
 termcolor
-einops
+einops # required for Mosaic models
+click 
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
