--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ protobuf==3.20.0
 termcolor
 einops # required for Mosaic models
 click 
+bitsandbytes
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
