--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 chromadb==0.3.21
 langchain==0.0.189
 llama-index==0.6.9
+tokenizers==0.13.3
+transformers==4.29.2
 sentence-transformers==2.2.2
 pypdf2==3.0.1
 sentencepiece==0.1.99
@@ -8,11 +10,12 @@ setuptools==67.7.2
 loguru
 python-dotenv
 accelerate==0.19.0
-protobuf==3.20.0
+protobuf==3.20.2
 termcolor
 einops # required for Mosaic models
 click 
 bitsandbytes
+auto-gptq
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
@@ -25,5 +28,5 @@ tokenizers==0.13.3 ; python_version >= "3.10" and python_version < "4.0"
 torch==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 torchvision==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
 tqdm==4.65.0 ; python_version >= "3.10" and python_version < "4.0"
-transformers==4.28.1 ; python_version >= "3.10" and python_version < "4.0"
+# transformers==4.29.2 ; python_version >= "3.10" and python_version < "4.0"
 
