--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ einops # required for Mosaic models
 click 
 bitsandbytes
 auto-gptq
+InstructorEmbedding==1.0.1
 # llama-cpp-python
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
