--- a/sample_templates/msft-docs.yaml
+++ b/sample_templates/msft-docs.yaml
@@ -1,14 +1,15 @@
 cache_folder: /storage/llm/cache
 
 embeddings:
-  doc_path: /storage/llm/databricks-docs
+  doc_path: /storage/llm/microsoft-docs
   embeddings_path: /storage/llm/embeddings_databricks
   chunk_size: 1024
   scan_extensions: 
+    - md
     - pdf
 
 semantic_search:
-  search_type: mmr # similarity
+  search_type: mmr # similarity #
   replace_output_path:
     substring_search: "/storage"
     substring_replace: "file:///storage"
@@ -32,7 +33,7 @@ llm:
 
         ### Question: {question}
     model_kwargs:
-      temperature: 0.7
+      temperature: 0.0
       model_name: gpt-3.5-turbo-0613
 
 
