--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ bitsandbytes
 auto-gptq
 InstructorEmbedding==1.0.1
 unstructured==0.7.8
+pymupdf==1.22.5
 # llama-cpp-python
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
