--- a/sample_templates/pdf_library.yaml
+++ b/sample_templates/pdf_library.yaml
@@ -10,7 +10,7 @@ embeddings:
     - pdf
 
 semantic_search:
-  search_type: similarity # similarity # mmr
+  search_type: similarity #mmr #similarity # mmr
   replace_output_path:
     substring_search: "/storage"
     substring_replace: "file:///storage"
@@ -25,7 +25,7 @@ llm:
   type: openai
   params:
     prompt_template: |
-        Context information is provided below. Given only the context information and not prior knowledge, provide detailed answer to the question. 
+        Contex information is provided below. Given only the context and not prior knowledge, provide detailed answer to the question and references to the provided context. If answer isn't in the context, say you don't know.
 
         ### Context:
         ---------------------
@@ -35,7 +35,7 @@ llm:
         ### Question: {question}
     model_kwargs:
       temperature: 0.0
-      model_name: gpt-3.5-turbo-0613
+      model_name: gpt-3.5-turbo
 
 #
 # llm:
