--- a/sample_templates/pdf_library.yaml
+++ b/sample_templates/pdf_library.yaml
@@ -1,19 +1,20 @@
 cache_folder: /storage/llm/cache
 
 embeddings:
-  doc_path: /storage/llm/pdf_docs
   embeddings_path: /storage/llm/embeddings_library
-  chunk_size: 1024
-  scan_extensions: 
-    # - epub
-    - md
-    - pdf
+  document_settings:
+  - doc_path: /storage/llm/pdf_docs
+    chunk_size: 1024
+    scan_extensions: 
+      # - epub
+      - md
+      - pdf
 
 semantic_search:
   search_type: similarity #mmr #similarity # mmr
   replace_output_path:
-    substring_search: "/storage"
-    substring_replace: "file:///storage"
+    - substring_search: "/storage"
+      substring_replace: "file:///storage"
 
   append_suffix:
     append_template: "#page={page}"
