--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ InstructorEmbedding==1.0.1
 unstructured==0.7.8
 pymupdf==1.22.5
 streamlit==1.24.1
+python-docx==0.8.11
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
