--- a/sample_templates/msft-docs.yaml
+++ b/sample_templates/msft-docs.yaml
@@ -7,9 +7,11 @@ embeddings:
     type: sentence_transformer
     model_name: "intfloat/e5-large-v2"
 
+  chunk_sizes:
+    - 1024
+
   document_settings:
   - doc_path: /storage/llm/microsoft-docs
-    chunk_size: 1024
     scan_extensions: 
       - md
       - pdf
