--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 llama-cpp-python
+torch==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
+torchvision==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
 chromadb==0.3.26
 langchain==0.0.219
 llama-index==0.6.9
@@ -10,13 +12,13 @@ sentencepiece==0.1.99
 setuptools==67.7.2
 loguru
 python-dotenv
-accelerate==0.19.0
+accelerate==0.21.0
 protobuf==3.20.2
 termcolor
 einops # required for Mosaic models
 click 
 bitsandbytes
-auto-gptq
+auto-gptq==0.2.0
 InstructorEmbedding==1.0.1
 unstructured==0.7.8
 pymupdf==1.22.5
@@ -31,8 +33,6 @@ tenacity==8.2.2 ; python_version >= "3.10" and python_version < "4.0"
 threadpoolctl==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
 tiktoken==0.3.3 ; python_version >= "3.10" and python_version < "4.0"
 tokenizers==0.13.3 ; python_version >= "3.10" and python_version < "4.0"
-torch==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
-torchvision==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
 tqdm==4.65.0 ; python_version >= "3.10" and python_version < "4.0"
 # transformers==4.29.2 ; python_version >= "3.10" and python_version < "4.0"
 
