--- a/sample_templates/obsidian_conf.yaml
+++ b/sample_templates/obsidian_conf.yaml
@@ -12,6 +12,7 @@ embeddings:
 
   document_settings:
   - doc_path: /home/snexus/projects/knowledge-base
+ #  - doc_path: /storage/llm/docs
     exclude_paths:
       - /home/snexus/projects/knowledge-base/daily_notes
       - /home/snexus/projects/knowledge-base/templates
