--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,38 @@
-llama-cpp-python
-torch==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
-torchvision==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
-chromadb==0.3.26
-langchain==0.0.219
-llama-index==0.6.9
-tokenizers==0.13.3
-transformers==4.29.2
-sentence-transformers==2.2.2
-pypdf2==3.0.1
-sentencepiece==0.1.99
-setuptools==67.7.2
+# llama-cpp-python
+# torch==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
+# torchvision==0.15.1 ; python_version >= "3.10" and python_version < "4.0"
+# chromadb==0.3.26
+# langchain==0.0.219
+# llama-index==0.6.9
+# tokenizers==0.13.3
+# transformers==4.29.2
+# sentence-transformers==2.2.2
+# pypdf2==3.0.1
+# sentencepiece==0.1.99
+# setuptools==67.7.2
 loguru
-python-dotenv
-accelerate==0.21.0
-protobuf==3.20.2
-termcolor
-einops # required for Mosaic models
-click 
-bitsandbytes
-# auto-gptq==0.2.0
-InstructorEmbedding==1.0.1
-unstructured==0.7.8
-pymupdf==1.22.5
-streamlit==1.24.1
-python-docx==0.8.11
-six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
-sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
-sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
-starlette==0.26.1 ; python_version >= "3.10" and python_version < "4.0"
-sympy==1.11.1 ; python_version >= "3.10" and python_version < "4.0"
-tenacity==8.2.2 ; python_version >= "3.10" and python_version < "4.0"
-threadpoolctl==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
-tiktoken==0.3.3 ; python_version >= "3.10" and python_version < "4.0"
-tokenizers==0.13.3 ; python_version >= "3.10" and python_version < "4.0"
-tqdm==4.65.0 ; python_version >= "3.10" and python_version < "4.0"
-# transformers==4.29.2 ; python_version >= "3.10" and python_version < "4.0"
+# python-dotenv
+# accelerate==0.21.0
+# protobuf==3.20.2
+# termcolor
+# einops # required for Mosaic models
+# click 
+# bitsandbytes
+# # auto-gptq==0.2.0
+# InstructorEmbedding==1.0.1
+# unstructured==0.7.8
+# pymupdf==1.22.5
+# streamlit==1.24.1
+# python-docx==0.8.11
+# six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+# sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
+# sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
+# starlette==0.26.1 ; python_version >= "3.10" and python_version < "4.0"
+# sympy==1.11.1 ; python_version >= "3.10" and python_version < "4.0"
+# tenacity==8.2.2 ; python_version >= "3.10" and python_version < "4.0"
+# threadpoolctl==3.1.0 ; python_version >= "3.10" and python_version < "4.0"
+# tiktoken==0.3.3 ; python_version >= "3.10" and python_version < "4.0"
+# tokenizers==0.13.3 ; python_version >= "3.10" and python_version < "4.0"
+# tqdm==4.65.0 ; python_version >= "3.10" and python_version < "4.0"
+# # transformers==4.29.2 ; python_version >= "3.10" and python_version < "4.0"
 
