--- a/sample_templates/obsidian_conf.yaml
+++ b/sample_templates/obsidian_conf.yaml
@@ -5,14 +5,16 @@ embeddings:
   embedding_model:
     type: sentence_transformer
     model_name: "intfloat/e5-large-v2"
+  splade_config:
+    n_batch: 2
 
  # Support for multi-chunking
   chunk_sizes:
     - 1024
 
   document_settings:
-  - doc_path: /home/snexus/projects/knowledge-base
- #  - doc_path: /storage/llm/docs
+ #  - doc_path: /home/snexus/projects/knowledge-base
+  - doc_path: /storage/llm/docs
     exclude_paths:
       - /home/snexus/projects/knowledge-base/daily_notes
       - /home/snexus/projects/knowledge-base/templates
