Support for offline database for saving LLM responses

--- a/sample_templates/obsidian_conf.yaml
+++ b/sample_templates/obsidian_conf.yaml
@@ -13,8 +13,8 @@ embeddings:
     - 1024
 
   document_settings:
- #  - doc_path: /home/snexus/projects/knowledge-base
-  - doc_path: /storage/llm/docs
+  - doc_path: /home/snexus/projects/knowledge-base
+    #- doc_path: /storage/llm/docs
     exclude_paths:
       - /home/snexus/projects/knowledge-base/daily_notes
       - /home/snexus/projects/knowledge-base/templates
