Add labels support

--- a/sample_templates/obsidian_conf.yaml
+++ b/sample_templates/obsidian_conf.yaml
@@ -13,8 +13,8 @@ embeddings:
     - 1024
 
   document_settings:
-  - doc_path: /home/snexus/projects/knowledge-base
-    #- doc_path: /storage/llm/docs
+  # - doc_path: /home/snexus/projects/knowledge-base
+  - doc_path: /storage/llm/docs
     exclude_paths:
       - /home/snexus/projects/knowledge-base/daily_notes
       - /home/snexus/projects/knowledge-base/templates
@@ -32,6 +32,13 @@ embeddings:
         # find_metadata:
         #   description: "description:"
     passage_prefix: "passage: "
+    label: "obsidian"
+
+  - doc_path: /storage/llm/pdf_docs2
+    scan_extensions: 
+      - pdf
+    passage_prefix: "passage: "
+    label: "books"
 
 
 semantic_search:
