--- a/sample_templates/msft-docs.yaml
+++ b/sample_templates/msft-docs.yaml
@@ -6,16 +6,33 @@ embeddings:
   embedding_model:
     type: sentence_transformer
     model_name: "intfloat/e5-large-v2"
+  splade_config:
+    n_batch: 5
 
   chunk_sizes:
     - 1024
 
   document_settings:
-  - doc_path: /storage/llm/microsoft-docs
+  - doc_path: /storage/llm/microsoft-docs/databricks
     scan_extensions: 
       - md
       - pdf
     passage_prefix: "passage: "
+    label: "databricks"
+
+  - doc_path: /storage/llm/microsoft-docs/azure-devops-docs-main
+    scan_extensions: 
+      - md
+      - pdf
+    additional_parser_settings:
+      md: 
+        skip_first: False
+        merge_sections: False
+        remove_images: True
+    passage_prefix: "passage: "
+    label: "azure-devops"
+
+    
 
 semantic_search:
   search_type: similarity # mmr # similarity #
@@ -34,12 +51,12 @@ llm:
   type: openai
   params:
     prompt_template: |
-        Context information is provided below. Given the context information and not prior knowledge, provide detailed answer to the question.
-
-        ### Context:
-        ---------------------
-        {context}
-        ---------------------
+       Contex information is provided below. Given only the context and not prior knowledge, provide detailed answer to the question and references to the provided context. If answer isn't in the context, say you don't know.
+        
+         ### Context:
+         ---------------------
+         {context}
+         ---------------------
 
         ### Question: {question}
     model_kwargs:
