--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.env.back
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
