--- a/sample_templates/llm/llamacpp.yaml
+++ b/sample_templates/llm/llamacpp.yaml
@@ -1,28 +1,27 @@
 # This file contains a configuration section relevant to LLM, not the entire config
 
 llm:
-  type: llamacpp
-  params:
-    model_path: /storage/llm/cache/WizardLM-13B-1.0-GGML/WizardLM-13B-1.0.ggmlv3.q5_K_S.bin
-    prompt_template: |
-          ### Instruction:
-          Use the following pieces of context to answer the question at the end. If answer isn't in the context, say that you don't know, don't try to make up an answer.
+ type: llamacpp
+ params:
+   model_path: /storage/llm/cache/airoboros/airoboros-l2-13b-gpt4-1.4.1.Q4_K_M.gguf
+   prompt_template: |
+         ### Instruction:
+         Use the following pieces of context to provide detailed answer the question at the end. If answer isn't in the context, say that you don't know, don't try to make up an answer.
 
-          ### Context:
-          ---------------
-          {context}
-          ---------------
+         ### Context:
+         ---------------
+         {context}
+         ---------------
 
-          ### Question: {question}
-          ### Response:
-    model_init_params:
-      n_ctx: 1024
-      n_batch: 512
-      n_gpu_layers: 30
+         ### Question: {question}
+         ### Response:
+   model_init_params:
+     n_ctx: 1512
+     n_batch: 512
+     n_gpu_layers: 25
 
-    model_kwargs:
-      max_tokens: 512
-      top_p: 0.1
-      top_k: 40
-      temperature: 0.7
-      mirostat_mode: 0
+   model_kwargs:
+     max_tokens: 512
+     top_p: 0.1
+     top_k: 40
+     temperature: 0.2
