--- a/sample_templates/obsidian_conf.yaml
+++ b/sample_templates/obsidian_conf.yaml
@@ -58,49 +58,49 @@ semantic_search:
 persist_response_db_path: responses_test.db
 
 
-llm:
-   type: openai
-   params:
-     prompt_template: |
-       Contex information is provided below. Given only the context and not prior knowledge, provide detailed answer to the question and references to the provided context. If answer isn't in the context, say you don't know.
+# llm:
+#    type: openai
+#    params:
+#      prompt_template: |
+#        Contex information is provided below. Given only the context and not prior knowledge, provide detailed answer to the question and references to the provided context. If answer isn't in the context, say you don't know.
         
-         ### Context:
-         ---------------------
-         {context}
-         ---------------------
+#          ### Context:
+#          ---------------------
+#          {context}
+#          ---------------------
 
-         ### Question: {question}
-     model_kwargs:
-       temperature: 0.0
-       model_name: gpt-3.5-turbo
+#          ### Question: {question}
+#      model_kwargs:
+#        temperature: 0.0
+#        model_name: gpt-3.5-turbo
 
 
-#llm:
+# llm:
 #  type: llamacpp
 #  params:
-#    model_path: /storage/llm/cache/WizardLM-13B-1.0-GGML/WizardLM-13B-1.0.ggmlv3.q5_K_S.bin
+#    model_path: /storage/llm/cache/airoboros/airoboros-l2-13b-gpt4-1.4.1.Q4_K_M.gguf
 #    prompt_template: |
 #          ### Instruction:
 #          Use the following pieces of context to provide detailed answer the question at the end. If answer isn't in the context, say that you don't know, don't try to make up an answer.
-#
+
 #          ### Context:
 #          ---------------
 #          {context}
 #          ---------------
-#
+
 #          ### Question: {question}
 #          ### Response:
 #    model_init_params:
 #      n_ctx: 1512
 #      n_batch: 512
 #      n_gpu_layers: 25
-#
+
 #    model_kwargs:
 #      max_tokens: 512
 #      top_p: 0.1
 #      top_k: 40
 #      temperature: 0.2
-#      # mirostat_mode: 1
+     # mirostat_mode: 1
 #
 
 
