--- a/sample_templates/obsidian_conf.yaml
+++ b/sample_templates/obsidian_conf.yaml
@@ -13,8 +13,8 @@ embeddings:
     - 1024
 
   document_settings:
-  # - doc_path: /home/snexus/projects/knowledge-base
-  - doc_path: /storage/llm/docs
+  - doc_path: /home/snexus/projects/knowledge-base
+  #- doc_path: /storage/llm/docs
     exclude_paths:
       - /home/snexus/projects/knowledge-base/daily_notes
       - /home/snexus/projects/knowledge-base/templates
@@ -34,11 +34,11 @@ embeddings:
     passage_prefix: "passage: "
     label: "obsidian"
 
-  - doc_path: /storage/llm/pdf_docs2
-    scan_extensions: 
-      - pdf
-    passage_prefix: "passage: "
-    label: "books"
+  # - doc_path: /storage/llm/pdf_docs2
+  #   scan_extensions: 
+  #     - pdf
+  #   passage_prefix: "passage: "
+  #   label: "books"
 
 
 semantic_search:
@@ -58,21 +58,21 @@ semantic_search:
 persist_response_db_path: responses_test.db
 
 
-# llm:
-#    type: openai
-#    params:
-#      prompt_template: |
-#        Contex information is provided below. Given only the context and not prior knowledge, provide detailed answer to the question and references to the provided context. If answer isn't in the context, say you don't know.
+llm:
+   type: openai
+   params:
+     prompt_template: |
+       Contex information is provided below. Given only the context and not prior knowledge, provide detailed answer to the question and references to the provided context. If answer isn't in the context, say you don't know.
         
-#          ### Context:
-#          ---------------------
-#          {context}
-#          ---------------------
+         ### Context:
+         ---------------------
+         {context}
+         ---------------------
 
-#          ### Question: {question}
-#      model_kwargs:
-#        temperature: 0.0
-#        model_name: gpt-3.5-turbo
+         ### Question: {question}
+     model_kwargs:
+       temperature: 0.0
+       model_name: gpt-3.5-turbo
 
 
 # llm:
