--- a/sample_templates/config_template.yaml
+++ b/sample_templates/config_template.yaml
@@ -43,6 +43,8 @@ semantic_search:
   # Reduce if out of CUDA memory.
   max_char_size: 4096 
   query_prefix: "query: " # Often queries have to be prefixed for embedding models, such as e5
+  hyde:
+    enabled: True
 
 persist_response_db_path:  "/path/to/responses.db" # optional sqlite database filename. Allows to save responses offlien to sqlite, for future analysis.
 
