--- a/sample_templates/config_template.yaml
+++ b/sample_templates/config_template.yaml
@@ -69,7 +69,7 @@ persist_response_db_path:  "/path/to/responses.db" # optional sqlite database fi
 llm:
   type: llamacpp
   params:
-    model_path: /storage/llm/cache/WizardLM-13B-1.0-GGML/WizardLM-13B-1.0.ggmlv3.q5_K_S.bin
+    model_path: /storage/llm/cache/airoboros-l2-13b-gpt4-1.4.1.Q4_K_M.gguf
     prompt_template: |
           ### Instruction:
           Use the following pieces of context to answer the question at the end. If answer isn't in the context, say that you don't know, don't try to make up an answer.
