--- a/sample_templates/pdf_library.yaml
+++ b/sample_templates/pdf_library.yaml
@@ -21,7 +21,7 @@ semantic_search:
   search_type: similarity #mmr #similarity # mmr
   replace_output_path:
     - substring_search: "/storage"
-      substring_replace: "file:///storage"
+      substring_replace: "okular:///storage"
 
   append_suffix:
     append_template: "#page={page}"
