--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 llama-cpp-python
-chromadb==0.4.22
-langchain==0.1.1
-pydantic==2.5.3
-transformers==4.36.2
-sentence-transformers==2.2.2
-pypdf2==3.0.1
+chromadb~=0.4
+langchain~=0.1
+pydantic~=2.5
+transformers~=4.36
+sentence-transformers~=2.2
+pypdf2~=3.0.1
 ebooklib==0.18
 sentencepiece==0.1.99
 setuptools==67.7.2
 loguru
 python-dotenv
-accelerate==0.22.0
+accelerate~=0.22.0
 protobuf==3.20.2
 termcolor
-openai==1.8.0
+openai~=1.8
 einops # required for Mosaic models
 click 
 bitsandbytes==0.42.0
 # auto-gptq==0.2.0
 InstructorEmbedding==1.0.1
-unstructured==0.10.11
+unstructured~=0.12.4
 pymupdf==1.22.5
-streamlit==1.28.0
-python-docx==0.8.11
+streamlit~=1.28
+python-docx~=1.1
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==1.4.48 ; python_version >= "3.10" and python_version < "4.0"
