--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -21,3 +21,7 @@ sphinx:
   # builder: "dirhtml"
   # Fail on all warnings to avoid broken references
   # fail_on_warning: true
+
+python:
+  install:
+    - requirements: docs/requirements.txt
