--- a/.venv2/pyvenv.cfg
+++ b/.venv2/pyvenv.cfg
@@ -2,4 +2,4 @@ home = /usr/bin
 include-system-site-packages = false
 version = 3.11.8
 executable = /usr/bin/python3.11
-command = /home/snexus/projects/llm-search/.venv/bin/python3 -m venv /home/snexus/projects/llm-search/.venv2
+command = /usr/bin/python3 -m venv /home/snexus/projects/llm-search/.venv2
