--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
         - name: Install build
           run: |
             python -m pip install --upgrade pip
-            pip install setuptools wheel twine
+            pip install build setuptools wheel twine
 
         - name: Run build
           run: python -m build
